--- a/ui/package.json
+++ b/ui/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.8",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^5.6.9",
+    "firebase": "^9.9.0",
     "next": "12.1.6",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "web3": "^1.7.3"
+    "react-web3-provider": "^1.1.2",
+    "web3": "^1.7.3",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "eslint": "8.15.0",
